[gd_scene load_steps=3 format=3 uid="uid://b22v6fnqcqds2"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_i6vpc"]
[ext_resource type="Texture2D" uid="uid://b2sfwuav1sbh4" path="res://icon.svg" id="2_tdmgd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6vpc")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GamePicture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -131.0
offset_right = 130.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -191.5
offset_top = -163.0
offset_right = 191.5
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 90
text = "Play"
icon = ExtResource("2_tdmgd")

[node name="ReturnButton" type="Button" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 47.0
offset_top = -103.0
offset_right = 173.0
offset_bottom = -34.0
grow_vertical = 0
text = "Return"

[node name="NextLevelButton" type="Button" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 190.0
offset_top = -50.5
offset_right = 286.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
text = "Sig. nivel"

[node name="PrevLevelButton" type="Button" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -46.5
offset_right = -189.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
text = "Ant. nivel"
